# talentlens

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.render  README.md  TalentLens_API_Collection.postman_collection.json  build-simple.sh  build.sh  get_token.py  pyproject.toml  render-docker.yaml  render.yaml  requirements-render-simple.txt  requirements-render.txt  sign_up.py  start-local.sh  verify_gemini.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py  settings.py
app/api/: candidates.py  jobs.py  users.py
app/core/: auth.py  firebase_helper.py  gemini_service.py
app/db/: session.py
app/models/: __init__.py  candidate.py  job.py  user.py
app/schemas/: __init__.py  candidate.py  job.py  user.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  render.yaml
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  Layout.jsx
frontend/src/components/auth/: Login.jsx  SignUp.jsx
frontend/src/components/candidates/: CandidateDetail.jsx  CandidateForm.jsx  CandidateList.jsx
frontend/src/components/jobs/: JobDetail.jsx  JobForm.jsx  JobList.jsx
frontend/src/config/: api.js  firebase.js
frontend/src/contexts/: AuthContext.jsx
